catalog/view/theme/helium/css/common.css
@font-face {
    font-family: 'Roboto Condensed';
    src: local('fonts/Roboto Condensed'), 
		 local('fonts/RobotoCondensed-Regular'), 
		 url('fonts/Robotocondensed.woff2') format('woff2'), 
		 url('fonts/Robotocondensed.woff') format('woff'), 
		 url('fonts/Robotocondensed.ttf') format('truetype');
    font-weight: 400;
    font-style: normal;
}
:root {
    /* Backgrounds */
    --bg-body:#ddd;
    --bg-main-blocks: #fffb;
    --bg-button: #fff;
    --bg-button-disabled: #999;
    --bg-inputs: #fffb;
    /* Text colors */
    --color-text: #333;
    --color-text-bright: #111;
    --color-text-muted: #777;
    --color-text-button: #111;
    /* Fancy things */
    --radius: calc(1rem * .5);
    --shadow: 0 0 3px 3px #3333;
    /* Scrollbar colors */
    --scrollbar-thumb: #999;
    --scrollbar-thumb-hover: #777;

    /* Transitions */
    --time: .4s;
    --style: cubic-bezier(0.175, 0.885, 0.32, 1.275);
    /* HSL color schema */
    --h: 230;
    --s: 76%;
    --l: 59%;
    --lighten: 15%;
    --darken: -15%;
    /* --color-1:   hsl(     var(--h),            var(--s),             var(--l)       );
    --color-2:   hsl(calc(var(--h) - 25), calc(var(--s) - 20%), calc(var(--l) - 10%));
    --color-3:   hsl(calc(var(--h) - 15), calc(var(--s) - 10%), calc(var(--l) - 10%));
    --color-4:   hsl(calc(var(--h) + 25), calc(var(--s) - 35%), calc(var(--l) - 15%));
    --color-5:   hsl(calc(var(--h) + 15), calc(var(--s) - 15%), var(--l)); */

    --color-1: hsl( var(--h), var(--s), var(--l) );
    --color-2: hsl(calc(var(--h) - 35), calc(var(--s) - 20%), calc(var(--l) - 10%));
    --color-3: hsl(calc(var(--h) - 20), calc(var(--s) - 10%), calc(var(--l) - 10%));
    --color-4: hsl(calc(var(--h) + 50), calc(var(--s) - 10%), calc(var(--l) - 15%));
    --color-5: hsl(calc(var(--h) + 100), calc(var(--s) - 15%), var(--l));



    --color-1-light:    hsl(var(--h), calc(var(--s) - 10%), calc(var(--l) + var(--lighten)));
    --color-1-dark:     hsl(var(--h), calc(var(--s) - 10%), calc(var(--l) + var(--darken)));

    --color-red: rgb(192, 1, 1);
    --danger:rgb(192, 77, 1);

    --gardient: linear-gradient(to right, var(--color-1) 0%, var(--color-5)  51%, var(--color-2)  100%);
    --gardient-2: linear-gradient(to right, var(--color-1) 0%, var(--color-2)  25%, var(--color-3)  50%, var(--color-4) 80%, var(--color-5)  100%);

    --icon-height: 1.3rem;

    --inputs-shadow: 0 0 8px #3333;

}
/* Neccessary */
* {box-sizing: border-box; scroll-behavior:smooth;}
body {font-family:system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,Segoe UI Emoji,Apple Color Emoji,Noto Color Emoji,sans-serif;font-family:'Roboto',sans-serif;line-height:1.4;word-wrap:normal;color:var(--color-text);text-rendering:optimizeLegibility;
    background:var(--gardient-2);margin: 0 auto;width: 100%;max-width: 100%;overflow-x:hidden;display: flex;flex-wrap:wrap;gap:1rem;padding:0;}

/* Responsive images and videos */
img,video {max-width: 100%;height: auto;}
/* Unstyled lists */
.list-unstyled {padding: 0; margin: 0; list-style-type: none;}
/* Normalize appearence */
address,blockquote cite {font-style:normal}
button, .button,
input:not([type=checkbox]):not([type=radio]),
input[type=range],
select,
textarea {
	-webkit-appearance:none
}
textarea {
	display:block;
	margin-right:0;
	box-sizing:border-box;
	resize:vertical;
	white-space: normal;
}
textarea:not([cols]) {
	width:100%
}
textarea:not([rows]) {
	min-height:40px;
	height:140px
}


/* Cursor over interactive elements */
button,.button,input[type=button],input[type=checkbox],input[type=radio],input[type=range],input[type=reset],input[type=submit],select,summary,.menu-icon,.menu-icon.open {cursor:pointer}

/* Links */
a {text-decoration:none;color:var(--color-1);border-radius: var(--radius);display: inline-block;background: transparent; transition: color var(--time) var(--style);}
a:hover, a:focus {text-decoration:none; color: var(--color-1-dark)}

a[disabled] {pointer-events: none}
a.button:hover {text-decoration: none}


/* Inputs */
input,select {display:block}

[type=checkbox],
[type=radio] {
    display:initial
}
input,
select,
textarea {
    background: var(--bg-inputs);
}

button, .button, a.button, a.primary,
input,
select,
textarea {
    color: var(--color-text-bright);
    font-family: inherit;
    font-size: inherit;
    padding:.7rem;
    border: none;
    outline: none;
    white-space: nowrap;
    justify-content: center;
    line-height: var(--icon-height);
    max-width: 100%;
    box-shadow: var(--inputs-shadow);
}
button, .button, a.button, a.primary,
input,
select,
textarea:not([rows]) {
    height: 45px;
}
button, .button,
input[type=button],
input[type=reset],
input[type=submit] {
    background-color:var(--bg-button);
    display: flex;
    align-items: center;
}

button:hover, .button:hover,
input[type=button]:hover,
input[type=reset]:hover,
input[type=submit]:hover {
    background:var(--bg-button)
}

/* Forms */
form {
	display: grid;
	place-content: center;
}

.form-group {display: flex;flex: 1;align-items: center; padding: 0.5rem;  border-radius: var(--radius); flex-wrap: wrap; }
.form-group label {flex: 1 1 auto;max-width: 8rem;}
.form-group input, .form-group select {flex: 1;}
.has-error {
	box-shadow: inset 0 0 0 2px var(--danger);
	transition: all var(--time);
    margin: .5rem;
}
.form-group.has-error {
	background: rgb(192 77 1 / 4%);
}

/* Text that follows input group or form group - error message or some explanation */
.input-group span , .form-group span {
	flex: 1 0 100%;
    width: 100%;
    flex-wrap: wrap;
    padding: .5rem 0 0;
}

.form-control {
    display: grid;
    grid-template-columns: 30px auto;
    gap: 1rem;
	margin: .5rem;
    align-items: center;
	transition: color var(--time);
}
/* ... */

